--- a/custom_components/muslim-prayer-companion/translations/en.json
+++ b/custom_components/muslim-prayer-companion/translations/en.json
@@ -5,8 +5,8 @@
         },
         "step": {
             "user": {
-                "description": "Do you want to set up Islamic Prayer Times?",
-                "title": "Set up Islamic Prayer Times"
+                "description": "Do you want to set up Muslim Prayer Companion?",
+                "title": "Set up Muslim Prayer Companion"
             }
         }
     },
